examples/datalog/15_arithmetic/30_complex_expression.dl
% Test: Complex arithmetic expression
% Expected: Correct order of operations
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_complex_expr
.kg use test_complex_expr

+nums[(2,), (3,), (5,)].

% Complex expression: (x + 1) * (x - 1) + x^2
complex(X, Y) :- nums(X), Y = (X + 1) * (X - 1) + X * X.

?- complex(X, Y).

.kg use default
.kg drop test_complex_expr
